// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth search results form no results should render correctly with no user and no results 1`] = `
<div>
  <div
    className="sc-crzoUp dCgppB"
  >
    <div
      className="sc-dIsAE duhJEp"
    >
      <form
        onSubmit={[Function]}
      >
        <label
          className="sc-fujyUd jkxA-dF"
          htmlFor="user"
        >
          <span
            className="sc-pNWxx caSoSk"
          >
            Username or email address
          </span>
          <input
            className="sc-iqAbSa byAOZe"
            defaultValue=""
            id="user"
            name="user"
            onChange={[Function]}
            type="text"
          />
        </label>
        <button
          className="sc-gKAblj iXATGr"
          disabled={false}
          id="search-button"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Auth search results form some results should render correctly with user and results 1`] = `
<div>
  <div
    className="sc-crzoUp dCgppB"
  >
    <div
      className="sc-dIsAE duhJEp"
    >
      <form
        onSubmit={[Function]}
      >
        <label
          className="sc-fujyUd jkxA-dF"
          htmlFor="user"
        >
          <span
            className="sc-pNWxx caSoSk"
          >
            Username or email address
          </span>
          <input
            className="sc-iqAbSa byAOZe"
            defaultValue="someuser"
            id="user"
            name="user"
            onChange={[Function]}
            type="text"
          />
        </label>
        <button
          className="sc-gKAblj iXATGr"
          disabled={false}
          id="search-button"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
  </div>
  <table
    className="sc-jSFkmK bVAlUI"
  >
    <tbody
      className="sc-gtssRu"
    >
      <tr
        className="sc-eCApGN"
      >
        <th
          className="sc-hKFyIo frRdSr"
        >
          Name
        </th>
        <th
          className="sc-hKFyIo frRdSr"
        >
          Username
        </th>
        <th
          className="sc-hKFyIo frRdSr"
        >
          Email
        </th>
        <th
          className="sc-hKFyIo frRdSr"
        >
          Locked
        </th>
        <th
          className="sc-hKFyIo frRdSr"
        >
          Enabled
        </th>
        <th
          className="sc-hKFyIo frRdSr"
        >
           
        </th>
      </tr>
      <tr
        className="sc-eCApGN"
      >
        <td
          className="sc-hKFyIo gngZTL"
        >
          Auth
           
          Adm
        </td>
        <td
          className="sc-hKFyIo gngZTL"
        >
          AUTH_ADM
        </td>
        <td
          className="sc-hKFyIo gngZTL"
        >
          auth_test2@digital.justice.gov.uk
        </td>
        <td
          className="sc-hKFyIo gngZTL"
        >
          Yes
        </td>
        <td
          className="sc-hKFyIo gngZTL"
        >
          No
        </td>
        <td
          className="sc-hKFyIo gngZTL"
        >
          <button
            className="sc-gKAblj hkIJTD"
            disabled={false}
            id="edit-button-AUTH_ADM"
            onClick={[Function]}
            value={0}
          >
            Edit
          </button>
        </td>
      </tr>
      <tr
        className="sc-eCApGN"
      >
        <td
          className="sc-hKFyIo gngZTL"
        >
          Auth
           
          Expired
        </td>
        <td
          className="sc-hKFyIo gngZTL"
        >
          AUTH_EXPIRED
        </td>
        <td
          className="sc-hKFyIo gngZTL"
        >
          auth_test2@digital.justice.gov.uk
        </td>
        <td
          className="sc-hKFyIo gngZTL"
        >
          No
        </td>
        <td
          className="sc-hKFyIo gngZTL"
        >
          Yes
        </td>
        <td
          className="sc-hKFyIo gngZTL"
        >
          <button
            className="sc-gKAblj hkIJTD"
            disabled={false}
            id="edit-button-AUTH_EXPIRED"
            onClick={[Function]}
            value={1}
          >
            Edit
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
